[gd_scene load_steps=14 format=2]

[ext_resource path="res://assets/textures/battle/characters/player.png" type="Texture" id=1]
[ext_resource path="res://assets/temp/light.png" type="Texture" id=2]
[ext_resource path="res://assets/fonts/Hyde-Regular.otf" type="DynamicFontData" id=3]
[ext_resource path="res://src/scenes/CharacterCreationScene.gd" type="Script" id=4]

[sub_resource type="DynamicFont" id=1]
size = 30
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 24
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=7]
draw_center = false
border_width_top = 3
border_width_bottom = 3
border_color = Color( 0.85098, 0.85098, 0.85098, 1 )
border_blend = true

[sub_resource type="StyleBoxFlat" id=5]
draw_center = false
border_width_top = 3
border_width_bottom = 3
border_color = Color( 0.509804, 0.509804, 0.509804, 1 )
border_blend = true

[sub_resource type="StyleBoxEmpty" id=8]

[sub_resource type="StyleBoxEmpty" id=9]

[sub_resource type="StyleBoxEmpty" id=6]

[sub_resource type="DynamicFont" id=3]
size = 24
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=10]
size = 36
font_data = ExtResource( 3 )

[node name="CharacterCreationScene" type="Node2D"]
script = ExtResource( 4 )

[node name="player" type="Sprite" parent="."]
position = Vector2( 176, 216 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 1 )

[node name="Light2D" type="Light2D" parent="player"]
position = Vector2( 32, -144 )
texture = ExtResource( 2 )
energy = 0.6

[node name="Light2D3" type="Light2D" parent="player"]
position = Vector2( -208, -208 )
texture = ExtResource( 2 )
energy = 0.6

[node name="Light2D2" type="Light2D" parent="player"]
position = Vector2( -80, 112 )
texture = ExtResource( 2 )
texture_scale = 1.5
energy = 0.9

[node name="Title" type="Label" parent="."]
margin_left = 384.0
margin_top = 48.0
margin_right = 521.0
margin_bottom = 113.0
custom_fonts/font = SubResource( 1 )
text = "Set your
Attributes"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HealthLabel" type="Label" parent="."]
margin_left = 328.0
margin_top = 184.0
margin_right = 465.0
margin_bottom = 209.0
custom_fonts/font = SubResource( 2 )
text = "Health"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AttackLabel" type="Label" parent="."]
margin_left = 328.0
margin_top = 216.0
margin_right = 465.0
margin_bottom = 241.0
custom_fonts/font = SubResource( 2 )
text = "Attack"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ProtectionLabel" type="Label" parent="."]
margin_left = 328.0
margin_top = 248.0
margin_right = 465.0
margin_bottom = 273.0
custom_fonts/font = SubResource( 2 )
text = "Protection"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Health" type="Label" parent="."]
margin_left = 448.0
margin_top = 184.0
margin_right = 585.0
margin_bottom = 209.0
custom_fonts/font = SubResource( 2 )
text = "0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Attack" type="Label" parent="."]
margin_left = 448.0
margin_top = 216.0
margin_right = 585.0
margin_bottom = 241.0
custom_fonts/font = SubResource( 2 )
text = "0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Protection" type="Label" parent="."]
margin_left = 448.0
margin_top = 248.0
margin_right = 585.0
margin_bottom = 273.0
custom_fonts/font = SubResource( 2 )
text = "0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PointsLabel" type="Label" parent="."]
margin_left = 336.0
margin_top = 296.0
margin_right = 551.0
margin_bottom = 361.0
custom_fonts/font = SubResource( 2 )
text = "Points Remaining: 6"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HealthUp" type="Button" parent="."]
margin_left = 528.0
margin_top = 184.0
margin_right = 560.0
margin_bottom = 209.0
custom_styles/hover = SubResource( 7 )
custom_styles/pressed = SubResource( 5 )
custom_styles/focus = SubResource( 8 )
custom_styles/disabled = SubResource( 9 )
custom_styles/normal = SubResource( 6 )
custom_fonts/font = SubResource( 3 )
custom_colors/font_color_disabled = Color( 0.258824, 0.258824, 0.258824, 1 )
text = "+"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AttackUp" type="Button" parent="."]
margin_left = 528.0
margin_top = 216.0
margin_right = 560.0
margin_bottom = 241.0
custom_styles/hover = SubResource( 7 )
custom_styles/pressed = SubResource( 5 )
custom_styles/focus = SubResource( 8 )
custom_styles/disabled = SubResource( 9 )
custom_styles/normal = SubResource( 6 )
custom_fonts/font = SubResource( 3 )
custom_colors/font_color_disabled = Color( 0.258824, 0.258824, 0.258824, 1 )
text = "+"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ProtectionUp" type="Button" parent="."]
margin_left = 528.0
margin_top = 248.0
margin_right = 560.0
margin_bottom = 273.0
custom_styles/hover = SubResource( 7 )
custom_styles/pressed = SubResource( 5 )
custom_styles/focus = SubResource( 8 )
custom_styles/disabled = SubResource( 9 )
custom_styles/normal = SubResource( 6 )
custom_fonts/font = SubResource( 3 )
custom_colors/font_color_disabled = Color( 0.258824, 0.258824, 0.258824, 1 )
text = "+"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HealthDown" type="Button" parent="."]
margin_left = 470.0
margin_top = 184.0
margin_right = 502.0
margin_bottom = 209.0
custom_styles/hover = SubResource( 7 )
custom_styles/pressed = SubResource( 5 )
custom_styles/focus = SubResource( 8 )
custom_styles/disabled = SubResource( 9 )
custom_styles/normal = SubResource( 6 )
custom_fonts/font = SubResource( 3 )
custom_colors/font_color_disabled = Color( 0.258824, 0.258824, 0.258824, 1 )
text = "-"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AttackDown" type="Button" parent="."]
margin_left = 470.0
margin_top = 217.0
margin_right = 502.0
margin_bottom = 242.0
custom_styles/hover = SubResource( 7 )
custom_styles/pressed = SubResource( 5 )
custom_styles/focus = SubResource( 8 )
custom_styles/disabled = SubResource( 9 )
custom_styles/normal = SubResource( 6 )
custom_fonts/font = SubResource( 3 )
custom_colors/font_color_disabled = Color( 0.258824, 0.258824, 0.258824, 1 )
text = "-"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ProtectionDown" type="Button" parent="."]
margin_left = 470.0
margin_top = 249.0
margin_right = 502.0
margin_bottom = 274.0
custom_styles/hover = SubResource( 7 )
custom_styles/pressed = SubResource( 5 )
custom_styles/focus = SubResource( 8 )
custom_styles/disabled = SubResource( 9 )
custom_styles/normal = SubResource( 6 )
custom_fonts/font = SubResource( 3 )
custom_colors/font_color_disabled = Color( 0.258824, 0.258824, 0.258824, 1 )
text = "-"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Continue" type="Button" parent="."]
margin_left = 432.0
margin_top = 360.0
margin_right = 559.0
margin_bottom = 397.0
custom_styles/hover = SubResource( 7 )
custom_styles/pressed = SubResource( 5 )
custom_styles/focus = SubResource( 8 )
custom_styles/disabled = SubResource( 9 )
custom_styles/normal = SubResource( 6 )
custom_fonts/font = SubResource( 10 )
custom_colors/font_color_disabled = Color( 0.258824, 0.258824, 0.258824, 1 )
disabled = true
text = "Start >>"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="HealthUp" to="." method="_on_HealthUp_pressed"]
[connection signal="pressed" from="AttackUp" to="." method="_on_AttackUp_pressed"]
[connection signal="pressed" from="ProtectionUp" to="." method="_on_ProtectionUp_pressed"]
[connection signal="pressed" from="HealthDown" to="." method="_on_HealthDown_pressed"]
[connection signal="pressed" from="AttackDown" to="." method="_on_AttackDown_pressed"]
[connection signal="pressed" from="ProtectionDown" to="." method="_on_ProtectionDown_pressed"]
[connection signal="pressed" from="Continue" to="." method="_on_Continue_pressed"]
